# MorphArch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  install.ps1  install.sh  morpharch.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  scan_and_analyze.sh
npm/morpharch/: package.json  postinstall.js
npm/morpharch-darwin-arm64/: package.json
npm/morpharch-darwin-x64/: package.json
npm/morpharch-linux-arm64/: package.json
npm/morpharch-linux-x64/: package.json
npm/morpharch-win32-x64/: package.json
src/: analysis.rs  blast_radius.rs  cli.rs  config.rs  db.rs  git_scanner.rs  graph_builder.rs  lib.rs  main.rs  models.rs  parser.rs  scoring.rs  utils.rs
src/commands/: analyze.rs  mod.rs  scan.rs  watch.rs
src/tui/: app.rs  architecture_map.rs  graph_renderer.rs  insight_panel.rs  mod.rs  timeline.rs  widgets.rs
website/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/blog/: 2026-03-07-welcome.md
website/docs/: cli-reference.md  installation.md  intro.md  quick-start.md
website/docs/concepts/: ast-parsing.md  how-it-works.md  scoring.md
website/docs/guides/: ci-cd-integration.md  configuration.md  security.md
website/src/: analytics.ts
website/src/components/HomepageFeatures/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
