[package]
name = "morpharch"
version = "0.4.0"
edition = "2024"
authors = ["Onur <onur@morpharch.dev>"]
description = "Monorepo architecture drift visualizer with animated TUI"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI framework — ergonomic subcommand definition with derive macros
clap = { version = "4.5", features = ["derive"] }

# Git operations — gitoxide pure-Rust library
gix = "0.70"

# SQLite — bundled feature removes system SQLite dependency
rusqlite = { version = "0.32", features = ["bundled"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling — rich error messages with context chain
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time operations
chrono = { version = "0.4", features = ["serde"] }

# Platform-independent directory paths (home dir, config dir, etc.)
dirs = "5.0"

# ── Sprint 2: Dependency Graph ──────────────────────────────────────────────

# Directed graph data structure — dependency graph modeling
petgraph = { version = "0.6", features = ["serde-1", "graphmap", "stable_graph"] }

# Tree-sitter — incremental parsing framework (C-based, fast)
tree-sitter = "0.22"

# Language grammars — each compiles a C grammar
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"

# File system traversal
walkdir = "2.5"

# ── Sprint 4: Animated TUI ───────────────────────────────────────────────────

# Terminal UI framework — Canvas widget, layout, styling
ratatui = { version = "0.29", features = ["all-widgets", "unstable"] }

# Terminal backend — event handling, raw mode
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime — event loop, timer, spawn
tokio = { version = "1.43", features = ["full"] }

# Async stream combinators
futures = "0.3"

# Random number generation — Verlet physics initial positions
rand = "0.8"
