[package]
name = "morpharch"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Onur <onur@morpharch.dev>"]
description = "Monorepo architecture drift visualizer with animated TUI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/onplt/morpharch"
homepage = "https://github.com/onplt/morpharch"
documentation = "https://docs.rs/morpharch"
readme = "README.md"
keywords = ["monorepo", "architecture", "drift", "tui", "dependency-graph"]
categories = ["command-line-utilities", "development-tools", "visualization"]
exclude = [
    ".github/",
    ".claude/",
    "demo-monorepo/",
    "morpharch-demo/",
    "test-repos/",
    "screenshots/",
    "*.gif",
    "*.mp4",
]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Git operations — gitoxide pure-Rust library
gix = "0.80"

# SQLite — bundled feature removes system SQLite dependency
rusqlite = { version = "0.32", features = ["bundled"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time operations
chrono = { version = "0.4", features = ["serde"] }

# Platform-independent directory paths
dirs = "5.0"

# Directed graph data structure
petgraph = { version = "0.6", features = ["serde-1", "graphmap", "stable_graph"] }

# Tree-sitter — incremental parsing framework
tree-sitter = "0.26"

# Language grammars
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

# File system traversal
walkdir = "2.5"

# Terminal UI framework
ratatui = { version = "0.29", features = ["all-widgets", "unstable"] }

# Terminal backend
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# Async stream combinators
futures = "0.3"

# Random number generation
rand = "0.8"

# Data-parallel iteration
rayon = "1.10"

# Bounded LRU cache
lru = "0.16"

[profile.release]
lto = true
codegen-units = 1
strip = true
